# elfhook

./: CMakeLists.txt  README  build.sh  build_tizen.sh  elfhook.cpp  elfhook.pro
common/inc/: common.h  logger.h
elfhook/: CMakeLists.txt  main.cpp
gbs/: gbs_tizen6.5.conf
inc/: elfmem.h  elfutils.h  logger.h
lib/: libtest.c  libtest.h
libelfmem/: CMakeLists.txt
libelfmem/inc/: elfmem.h  elfutils.h
libelfmem/src/: elfmem.cpp  elfutils.cpp
libraries/: CMakeLists.txt
libraries/elffuzz/: CMakeLists.txt  elffuzz.manifest
libraries/elffuzz/inc/: __elffuzz_def_h  __elfutils_h  elffuzz.h  elffuzz_def.h  libelffuzz.h
libraries/elffuzz/src/: elffuzz.cpp  libelffuzz.cpp
libraries/elfmem/: CMakeLists.txt
libraries/elfmem/inc/: elfmem.h  elfmem_def.h  elfutils.h  libelfmem.h
libraries/elfmem/src/: elfmem.cpp  elfutils.cpp  libelfmem.cpp
libraries/test/: CMakeLists.txt  libtest.cpp  libtest.h
libtest/: CMakeLists.txt
packaging/: elfhook.spec
src/: elfmem.cpp  elfutils.cpp  test.cpp
